src/ANTLR/ThanosParser.ts
// Generated from ./.antlr/ThanosParser.g4 by ANTLR 4.9.0-SNAPSHOT

import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { ThanosParserListener } from "./ThanosParserListener";

export class ThanosParser extends Parser {
  public static readonly INSERT = 1;
  public static readonly CREATE = 2;
  public static readonly EXISTS = 3;
  public static readonly SELECT = 4;
  public static readonly COPY = 5;
  public static readonly DATASET = 6;
  public static readonly TUTORIAL = 7;
  public static readonly PREPROCESS = 8;
  public static readonly UPDATE = 9;
  public static readonly DELETE = 10;
  public static readonly TABLE = 11;
  public static readonly FROM = 12;
  public static readonly BUILD = 13;
  public static readonly MODEL = 14;
  public static readonly PREDICT = 15;
  public static readonly EVALUATE = 16;
  public static readonly TRANSFORM = 17;
  public static readonly FIT = 18;
  public static readonly UPLOAD = 19;
  public static readonly SEARCH = 20;
  public static readonly CONVERT = 21;
  public static readonly IMAGE = 22;
  public static readonly AUDIO = 23;
  public static readonly VIDEO = 24;
  public static readonly KEYWORD = 25;
  public static readonly TEXT = 26;
  public static readonly LIST = 27;
  public static readonly THANOSQL = 28;
  public static readonly GET = 29;
  public static readonly USING = 30;
  public static readonly OPTIONS = 31;
  public static readonly PRINT = 32;
  public static readonly AS = 33;
  public static readonly BY = 34;
  public static readonly IDENTIFIER = 35;
  public static readonly NAME = 36;
  public static readonly OPERATOR_SPECIAL = 37;
  public static readonly COLON = 38;
  public static readonly SEMI_COLON = 39;
  public static readonly COMMA = 40;
  public static readonly EQUAL = 41;
  public static readonly LEFT_PAREN = 42;
  public static readonly RIGHT_PAREN = 43;
  public static readonly LEFT_SQURE = 44;
  public static readonly RIGHT_SQURE = 45;
  public static readonly DIVIDE = 46;
  public static readonly MULTIPLY = 47;
  public static readonly DOT = 48;
  public static readonly LT = 49;
  public static readonly GT = 50;
  public static readonly MINUS = 51;
  public static readonly WS = 52;
  public static readonly RULE_thanosLanguage = 0;
  public static readonly RULE_thanosQuery = 1;
  public static readonly RULE_thanosStmt = 2;
  public static readonly RULE_thanosSubquery = 3;
  public static readonly RULE_thanosBuildStmt = 4;
  public static readonly RULE_thanosBuildModelStmt = 5;
  public static readonly RULE_thanosFitStmt = 6;
  public static readonly RULE_thanosModelStmt = 7;
  public static readonly RULE_thanosUploadStmt = 8;
  public static readonly RULE_thanosUploadModelStmt = 9;
  public static readonly RULE_thanosDeleteStmt = 10;
  public static readonly RULE_thanosTransformStmt = 11;
  public static readonly RULE_thanosPredictStmt = 12;
  public static readonly RULE_thanosEvaluateStmt = 13;
  public static readonly RULE_thanosCreateStmt = 14;
  public static readonly RULE_thanosConvertStmt = 15;
  public static readonly RULE_thanosSearchStmt = 16;
  public static readonly RULE_thanosSearchImageStmt = 17;
  public static readonly RULE_thanosSearchAudioStmt = 18;
  public static readonly RULE_thanosSearchVideoStmt = 19;
  public static readonly RULE_thanosSearchKeywordStmt = 20;
  public static readonly RULE_thanosSearchTextStmt = 21;
  public static readonly RULE_thanosPreprocessStmt = 22;
  public static readonly RULE_thanosPreprocessTextStmt = 23;
  public static readonly RULE_thanosPreprocessImageStmt = 24;
  public static readonly RULE_thanosPreprocessAudioStmt = 25;
  public static readonly RULE_thanosPreprocessVideoStmt = 26;
  public static readonly RULE_thanosPrintStmt = 27;
  public static readonly RULE_thanosPrintImageStmt = 28;
  public static readonly RULE_thanosPrintAudioStmt = 29;
  public static readonly RULE_thanosPrintVideoStmt = 30;
  public static readonly RULE_thanosCopyStmt = 31;
  public static readonly RULE_thanosListStmt = 32;
  public static readonly RULE_thanosListTableStmt = 33;
  public static readonly RULE_thanosListModelStmt = 34;
  public static readonly RULE_thanosListThanoSQLModelStmt = 35;
  public static readonly RULE_thanosListThanoSQLTutorialStmt = 36;
  public static readonly RULE_thanosListThanoSQLDatasetStmt = 37;
  public static readonly RULE_thanosGetStmt = 38;
  public static readonly RULE_thanosGetThanoSQLModelStmt = 39;
  public static readonly RULE_thanosGetThanoSQLDatasetStmt = 40;
  public static readonly RULE_thanosUsingModelStmt = 41;
  public static readonly RULE_thanosUsingMethodStmt = 42;
  public static readonly RULE_thanosOptionStmt = 43;
  public static readonly RULE_normalSubquery = 44;
  public static readonly RULE_normalStmt = 45;
  public static readonly RULE_remaining = 46;
  public static readonly RULE_normalParenException = 47;
  // tslint:disable:no-trailing-whitespace
  public static readonly ruleNames: string[] = [
    "thanosLanguage",
    "thanosQuery",
    "thanosStmt",
    "thanosSubquery",
    "thanosBuildStmt",
    "thanosBuildModelStmt",
    "thanosFitStmt",
    "thanosModelStmt",
    "thanosUploadStmt",
    "thanosUploadModelStmt",
    "thanosDeleteStmt",
    "thanosTransformStmt",
    "thanosPredictStmt",
    "thanosEvaluateStmt",
    "thanosCreateStmt",
    "thanosConvertStmt",
    "thanosSearchStmt",
    "thanosSearchImageStmt",
    "thanosSearchAudioStmt",
    "thanosSearchVideoStmt",
    "thanosSearchKeywordStmt",
    "thanosSearchTextStmt",
    "thanosPreprocessStmt",
    "thanosPreprocessTextStmt",
    "thanosPreprocessImageStmt",
    "thanosPreprocessAudioStmt",
    "thanosPreprocessVideoStmt",
    "thanosPrintStmt",
    "thanosPrintImageStmt",
    "thanosPrintAudioStmt",
    "thanosPrintVideoStmt",
    "thanosCopyStmt",
    "thanosListStmt",
    "thanosListTableStmt",
    "thanosListModelStmt",
    "thanosListThanoSQLModelStmt",
    "thanosListThanoSQLTutorialStmt",
    "thanosListThanoSQLDatasetStmt",
    "thanosGetStmt",
    "thanosGetThanoSQLModelStmt",
    "thanosGetThanoSQLDatasetStmt",
    "thanosUsingModelStmt",
    "thanosUsingMethodStmt",
    "thanosOptionStmt",
    "normalSubquery",
    "normalStmt",
    "remaining",
    "normalParenException",
  ];

  private static readonly _LITERAL_NAMES: Array<string | undefined> = [
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    "'IMAGE'",
    "'AUDIO'",
    "'VIDEO'",
    "'KEYWORD'",
    "'TEXT'",
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    "':'",
    "';'",
    "','",
    "'='",
    "'('",
    "')'",
    "'['",
    "']'",
    "'/'",
    "'*'",
    "'.'",
    "'<'",
    "'>'",
    "'-'",
  ];
  private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
    undefined,
    "INSERT",
    "CREATE",
    "EXISTS",
    "SELECT",
    "COPY",
    "DATASET",
    "TUTORIAL",
    "PREPROCESS",
    "UPDATE",
    "DELETE",
    "TABLE",
    "FROM",
    "BUILD",
    "MODEL",
    "PREDICT",
    "EVALUATE",
    "TRANSFORM",
    "FIT",
    "UPLOAD",
    "SEARCH",
    "CONVERT",
    "IMAGE",
    "AUDIO",
    "VIDEO",
    "KEYWORD",
    "TEXT",
    "LIST",
    "THANOSQL",
    "GET",
    "USING",
    "OPTIONS",
    "PRINT",
    "AS",
    "BY",
    "IDENTIFIER",
    "NAME",
    "OPERATOR_SPECIAL",
    "COLON",
    "SEMI_COLON",
    "COMMA",
    "EQUAL",
    "LEFT_PAREN",
    "RIGHT_PAREN",
    "LEFT_SQURE",
    "RIGHT_SQURE",
    "DIVIDE",
    "MULTIPLY",
    "DOT",
    "LT",
    "GT",
    "MINUS",
    "WS",
  ];
  public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(
    ThanosParser._LITERAL_NAMES,
    ThanosParser._SYMBOLIC_NAMES,
    []
  );

  // @Override
  // @NotNull
  public get vocabulary(): Vocabulary {
    return ThanosParser.VOCABULARY;
  }
  // tslint:enable:no-trailing-whitespace

  // @Override
  public get grammarFileName(): string {
    return "ThanosParser.g4";
  }

  // @Override
  public get ruleNames(): string[] {
    return ThanosParser.ruleNames;
  }

  // @Override
  public get serializedATN(): string {
    return ThanosParser._serializedATN;
  }

  protected createFailedPredicateException(
    predicate?: string,
    message?: string
  ): FailedPredicateException {
    return new FailedPredicateException(this, predicate, message);
  }

  constructor(input: TokenStream) {
    super(input);
    this._interp = new ParserATNSimulator(ThanosParser._ATN, this);
  }
  // @RuleVersion(0)
  public thanosLanguage(): ThanosLanguageContext {
    let _localctx: ThanosLanguageContext = new ThanosLanguageContext(
      this._ctx,
      this.state
    );
    this.enterRule(_localctx, 0, ThanosParser.RULE_thanosLanguage);
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 96;
        this.thanosQuery();
        this.state = 97;
        this.match(ThanosParser.EOF);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public thanosQuery(): ThanosQueryContext {
    let _localctx: ThanosQueryContext = new ThanosQueryContext(
      this._ctx,
      this.state
    );
    this.enterRule(_localctx, 2, ThanosParser.RULE_thanosQuery);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 99;
        this.normalStmt();
        this.state = 105;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (
          ((_la & ~0x1f) === 0 &&
            ((1 << _la) &
              ((1 << ThanosParser.CREATE) |
                (1 << ThanosParser.COPY) |
                (1 << ThanosParser.PREPROCESS) |
                (1 << ThanosParser.DELETE) |
                (1 << ThanosParser.FROM) |
                (1 << ThanosParser.BUILD) |
                (1 << ThanosParser.PREDICT) |
                (1 << ThanosParser.EVALUATE) |
                (1 << ThanosParser.TRANSFORM) |
                (1 << ThanosParser.FIT) |
                (1 << ThanosParser.UPLOAD) |
                (1 << ThanosParser.SEARCH) |
                (1 << ThanosParser.CONVERT) |
                (1 << ThanosParser.LIST) |
                (1 << ThanosParser.GET))) !==
              0) ||
          _la === ThanosParser.PRINT ||
          _la === ThanosParser.LEFT_PAREN
        ) {
          {
            {
              this.state = 100;
              this.thanosStmt();
              this.state = 101;
              this.normalStmt();
            }
          }
          this.state = 107;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public thanosStmt(): ThanosStmtContext {
    let _localctx: ThanosStmtContext = new ThanosStmtContext(
      this._ctx,
      this.state
    );
    this.enterRule(_localctx, 4, ThanosParser.RULE_thanosStmt);
    try {
      this.state = 125;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case ThanosParser.BUILD:
          this.enterOuterAlt(_localctx, 1);
          {
            this.state = 108;
            this.thanosBuildStmt();
          }
          break;
        case ThanosParser.FIT:
          this.enterOuterAlt(_localctx, 2);
          {
            this.state = 109;
            this.thanosFitStmt();
          }
          break;
        case ThanosParser.UPLOAD:
          this.enterOuterAlt(_localctx, 3);
          {
            this.state = 110;
            this.thanosUploadStmt();
          }
          break;
        case ThanosParser.DELETE:
          this.enterOuterAlt(_localctx, 4);
          {
            this.state = 111;
            this.thanosDeleteStmt();
          }
          break;
        case ThanosParser.TRANSFORM:
          this.enterOuterAlt(_localctx, 5);
          {
            this.state = 112;
            this.thanosTransformStmt();
          }
          break;
        case ThanosParser.PREDICT:
          this.enterOuterAlt(_localctx, 6);
          {
            this.state = 113;
            this.thanosPredictStmt();
          }
          break;
        case ThanosParser.EVALUATE:
          this.enterOuterAlt(_localctx, 7);
          {
            this.state = 114;
            this.thanosEvaluateStmt();
          }
          break;
        case ThanosParser.CREATE:
          this.enterOuterAlt(_localctx, 8);
          {
            this.state = 115;
            this.thanosCreateStmt();
          }
          break;
        case ThanosParser.CONVERT:
          this.enterOuterAlt(_localctx, 9);
          {
            this.state = 116;
            this.thanosConvertStmt();
          }
          break;
        case ThanosParser.SEARCH:
          this.enterOuterAlt(_localctx, 10);
          {
            this.state = 117;
            this.thanosSearchStmt();
          }
          break;
        case ThanosParser.PREPROCESS:
          this.enterOuterAlt(_localctx, 11);
          {
            this.state = 118;
            this.thanosPreprocessStmt();
          }
          break;
        case ThanosParser.PRINT:
          this.enterOuterAlt(_localctx, 12);
          {
            this.state = 119;
            this.thanosPrintStmt();
          }
          break;
        case ThanosParser.COPY:
          this.enterOuterAlt(_localctx, 13);
          {
            this.state = 120;
            this.thanosCopyStmt();
          }
          break;
        case ThanosParser.LIST:
          this.enterOuterAlt(_localctx, 14);
          {
            this.state = 121;
            this.thanosListStmt();
          }
          break;
        case ThanosParser.GET:
          this.enterOuterAlt(_localctx, 15);
          {
            this.state = 122;
            this.thanosGetStmt();
          }
          break;
        case ThanosParser.LEFT_PAREN:
          this.enterOuterAlt(_localctx, 16);
          {
            this.state = 123;
            this.normalParenException();
          }
          break;
        case ThanosParser.FROM:
          this.enterOuterAlt(_localctx, 17);
          {
            this.state = 124;
            this.normalSubquery();
          }
          break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public thanosSubquery(): ThanosSubqueryContext {
    let _localctx: ThanosSubqueryContext = new ThanosSubqueryContext(
      this._ctx,
      this.state
    );
    this.enterRule(_localctx, 6, ThanosParser.RULE_thanosSubquery);
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 127;
        this.match(ThanosParser.LEFT_PAREN);
        this.state = 128;
        this.thanosQuery();
        this.state = 129;
        this.match(ThanosParser.RIGHT_PAREN);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public thanosBuildStmt(): ThanosBuildStmtContext {
    let _localctx: ThanosBuildStmtContext = new ThanosBuildStmtContext(
      this._ctx,
      this.state
    );
    this.enterRule(_localctx, 8, ThanosParser.RULE_thanosBuildStmt);
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 131;
        this.match(ThanosParser.BUILD);
        this.state = 132;
        this.thanosBuildModelStmt();
        this.state = 133;
        this.match(ThanosParser.AS);
        this.state = 135;
        this._errHandler.sync(this);
        switch (this.interpreter.adaptivePredict(this._input, 2, this._ctx)) {
          case 1:
            {
              this.state = 134;
              this.thanosSubquery();
            }
            break;
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public thanosBuildModelStmt(): ThanosBuildModelStmtContext {
    let _localctx: ThanosBuildModelStmtContext =
      new ThanosBuildModelStmtContext(this._ctx, this.state);
    this.enterRule(_localctx, 10, ThanosParser.RULE_thanosBuildModelStmt);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 137;
        this.match(ThanosParser.MODEL);
        this.state = 138;
        _localctx._user_model_name = this.match(ThanosParser.IDENTIFIER);
        this.state = 139;
        this.match(ThanosParser.USING);
        this.state = 140;
        _localctx._model_class = this.match(ThanosParser.IDENTIFIER);
        this.state = 142;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === ThanosParser.OPTIONS) {
          {
            this.state = 141;
            this.thanosOptionStmt();
          }
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public thanosFitStmt(): ThanosFitStmtContext {
    let _localctx: ThanosFitStmtContext = new ThanosFitStmtContext(
      this._ctx,
      this.state
    );
    this.enterRule(_localctx, 12, ThanosParser.RULE_thanosFitStmt);
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 144;
        this.match(ThanosParser.FIT);
        this.state = 145;
        this.thanosModelStmt();
        this.state = 146;
        this.match(ThanosParser.AS);
        this.state = 148;
        this._errHandler.sync(this);
        switch (this.interpreter.adaptivePredict(this._input, 4, this._ctx)) {
          case 1:
            {
              this.state = 147;
              this.thanosSubquery();
            }
            break;
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public thanosModelStmt(): ThanosModelStmtContext {
    let _localctx: ThanosModelStmtContext = new ThanosModelStmtContext(
      this._ctx,
      this.state
    );
    this.enterRule(_localctx, 14, ThanosParser.RULE_thanosModelStmt);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 150;
        this.match(ThanosParser.MODEL);
        this.state = 151;
        _localctx._user_model_name = this.match(ThanosParser.IDENTIFIER);
        this.state = 153;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === ThanosParser.USING) {
          {
            this.state = 152;
            this.thanosUsingModelStmt();
          }
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public thanosUploadStmt(): ThanosUploadStmtContext {
    let _localctx: ThanosUploadStmtContext = new ThanosUploadStmtContext(
      this._ctx,
      this.state
    );
    this.enterRule(_localctx, 16, ThanosParser.RULE_thanosUploadStmt);
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 155;
        this.match(ThanosParser.UPLOAD);
        this.state = 156;
        this.thanosUploadModelStmt();
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public thanosUploadModelStmt(): ThanosUploadModelStmtContext {
    let _localctx: ThanosUploadModelStmtContext =
      new ThanosUploadModelStmtContext(this._ctx, this.state);
    this.enterRule(_localctx, 18, ThanosParser.RULE_thanosUploadModelStmt);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 158;
        this.match(ThanosParser.MODEL);
        this.state = 159;
        _localctx._user_model_name = this.match(ThanosParser.IDENTIFIER);
        this.state = 161;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === ThanosParser.OPTIONS) {
          {
            this.state = 160;
            this.thanosOptionStmt();
          }
        }
